add missing props
Signed-off-by: at670475 <andrea.tabone@broadcom.com>